fix deadlock in imap ssl calling isAlive, r=standard8, bug 711787